# mistral_ws

./: main.py  pyproject.toml  requirements.txt
mistral_ssm/: doc_hf_embed.py  doc_loaders.py  resume.docx  resume.txt  test_mistral.py
mistral_ssm/chroma.db/: chroma.sqlite3
